--- a/rust2cpp/lib/Cargo.toml
+++ b/rust2cpp/lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "my_rust_lib"
 version = "0.1.0"
-authors = ["Your Name <you@example.com>"] 
+authors = ["Russell Myers <russell@russellmyers.com>"] 
 
 [lib]
 name = "my_rust_lib"
