Create dependency chain that represents Rust -> C -> Rust.
Note that 0.4 tag did not work.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ include(FetchContent)
 FetchContent_Declare(
     Corrosion
     GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
-    GIT_TAG v0.4 # Optionally specify a commit hash, version tag or branch here
 )
 FetchContent_MakeAvailable(Corrosion)
 
@@ -13,3 +12,4 @@ project(rust_cpp_interop)
 
 add_subdirectory(rust2cpp)
 add_subdirectory(cpp2rust)
+add_subdirectory(mixed)
